# snakeAI

./: Policy Gradient.md  README.md  bpnn.cpp  bpnn.h  common.h  controller.cpp  controller.h  ddpg.cpp  dqn.cpp  dqn.h  dqnSnake.pro  main.cpp  mainwindow.cpp  policyGradient.cpp  policyGradient.h
build-dqnSnake-Desktop_Qt_5_12_9_GCC_64bit-Debug/: Makefile  bp_weights3  ddpg_actor_1  ddpg_critic_1  dpg_weights  dqnSnake  dqn_weights  dqn_weights_adam  dqn_weights_relu  moc_mainwindow.cpp  ui_mainwindow.h
snakeAI/: .gitignore  CMakeLists.txt  SimpleRL.pro  agent.cpp  agent.h  axis.cpp  axis.h  board.cpp  board.h  bpnn.cpp  bpnn.cpp.autosave  bpnn.h  bpnn.h.autosave  common.cpp  common.h  controller.cpp  controller.h  curve.cpp  curve.h  ddpg.cpp  ddpg.h  dpg.cpp  dpg.h  dqn.cpp  dqn.h  dqnSnake.pro  dqnSnake.pro.user.954845e  environment.cpp  environment.h  gamewidget.cpp  gamewidget.h  genetic.cpp  genetic.h  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlp.cpp  mlp.h  (+6 more)
snakeAI/docs/: analysis_report.md  attention_gradient_analysis.md  bcq_divergence_analysis.md  bcq_optimization.md  conv2d_analysis.md  convdqn.md  ddpg_optimization.md  dqn_analysis.md  dqn_gradient_check_report.md  drpg_analysis.md  gradient_verification_report.md  lstm_gradient_analysis.md  mamba_design.md  moe_implementation.md  multi_head_attention_design.md  qlstm_optimization.md  sac_optimization.md  softmax_jacobian_optimization.md  ssm_design.md  trpo_design.md
snakeAI/rl/: activate.h  annealing.hpp  attention.hpp  bcq.cpp  bcq.h  bpnn.cpp  bpnn.h  cnn.cpp  cnn.h  concat.hpp  conv2d.h  conv2d.hpp  convdqn.cpp  convdqn.h  convpg.cpp  convpg.h  ddpg.cpp  ddpg.h  dpg.cpp  dpg.h  dqn.cpp  dqn.h  drpg.cpp  drpg.h  gan.cpp  gan.h  gru.cpp  gru.h  ilayer.h  layer.h  loss.h  lstm.cpp  lstm.h  lstmnet.h  mamba.cpp  mamba.h  mat.cpp  mat.h  mat.hpp  moe.hpp  (+29 more)
snakeAI/test/: test.cpp  test_dqn.cpp  test_lstm.cpp  test_mamba.cpp  test_moe.cpp  test_mpg.cpp  test_pg.cpp  test_sac.cpp  test_ssm.cpp  test_trpo.cpp
